# rust-wasm-htmx

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  build.sh  index.html  nixpacks.toml  package.json  play.html  railway.toml  server.js  vite.config.ts
public/: manifest.json
src/: lib.rs  server.rs  websocket_server.rs
