[package]
name = "rust-frame-host"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Add binary target for WebSocket server
[[bin]]
name = "websocket-server"
path = "src/websocket_server.rs"

[dependencies]
# WASM dependencies
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlElement", "Window"] }
js-sys = "0.3"

# WebSocket server dependencies
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] } 