[package]
name = "rust-frame-host"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Combined server binary
[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlElement", "Window"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Server dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
serde_json = "1.0"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3" 