[package]
name = "rust-frame-host"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# HTTP + WebSocket server binary
[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlElement", "Window"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Pure Rust server with WebSockets - add required features
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "sync", "macros"], default-features = false }
tokio-tungstenite = { version = "0.21", features = ["handshake"], default-features = false }
serde_json = "1.0"
futures-util = { version = "0.3", default-features = false }
time = { version = "0.3", features = ["formatting"], default-features = false } 